added color heart and js update
updates like count/value in object/array

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="vanGogh-post flex">
             <img class="vanGogh-img" src="images/post-vangogh.jpg">
             <div class="icons">
-                <button id="vanGogh-heart"><img class="icon-btn flex"  src="images/icon-heart.png"></button>
+                <button id="vanGogh-heart"><img class="icon-btn flex heart"  src="images/icon-heart.png"></button>
                 <img class="icon-btn flex" src="images/icon-comment.png">
                 <img class="icon-btn flex" src="images/icon-dm.png">
                 <p class="likes" id="vanGogh-likes"></p>
@@ -44,7 +44,7 @@
 <section class="courbet-post flex">
     <img class="courbet-img" src="images/post-courbet.jpg">
     <div class="icons">
-        <button id="courbet-heart"><img class="icon-btn flex" src="images/icon-heart.png"></button>
+        <button id="courbet-heart"><img class="icon-btn flex heart" src="images/icon-heart.png"></button>
         <img class="icon-btn flex" src="images/icon-comment.png">
         <img class="icon-btn flex" src="images/icon-dm.png">
         <p class="likes" id="courbet-likes"></p>
@@ -64,7 +64,7 @@
 <section class="ducreux-post flex">
     <img class="ducreux-img" src="images/post-ducreux.jpg">
     <div class="icons">
-        <button id="ducreux-heart"><img class="icon-btn flex" src="images/icon-heart.png"></button>
+        <button id="ducreux-heart"><img class="icon-btn flex heart" src="images/icon-heart.png"></button>
         <img class="icon-btn flex" src="images/icon-comment.png">
         <img class="icon-btn flex" src="images/icon-dm.png">
         <p class="likes" id="ducreux-likes"></p>
